
[TestMarkCommand/marks_the_focused_window_-_`marks_mark_mark1` - 1]
[]windows.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
}
aerospace-marks mark mark1

Replaced all marks with 'mark1'

---

[TestMarkCommand/marks_window_by_id_-_`marks_mark_mark1_--window-id_2` - 1]
[]windows.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
}
aerospace-marks mark mark1 --window-id 2

Replaced all marks with 'mark1'

---

[TestMarkCommand/marks_the_focused_window_-_`marks_mark_--add` - 1]
[]windows.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1", AppBundleID:"", Workspace:""},
}
aerospace-marks mark mark2 --add

Added mark: mark2

---

[TestMarkCommand/validates_missing_identifier_-_`marks_mark` - 1]
aerospace-marks mark

accepts 1 arg(s), received 0
---

[TestMarkCommand/marks_toggles_mark_(remove)_-_`marks_foobar_--toggle` - 1]
[]windows.Window{
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
}
aerospace-marks mark foobar --toggle

Toggling mark: foobar

---

[TestMarkCommand/marks_toggles_mark_(adding)_-_`marks_foobar_--toggle` - 1]
[]windows.Window{
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
}
aerospace-marks mark foobar --toggle

Toggling mark: foobar

---

[TestMarkCommand/fails_when_empty_identifier_-_`marks_''` - 1]
[]windows.Window{
    {WindowID:2, WindowTitle:"title2", AppName:"app2", AppBundleID:"", Workspace:""},
}
aerospace-marks mark 

Error
argument cannot be empty or whitespace
---
